--- a/exemplo.ipynb
+++ b/exemplo.ipynb
@@ -68,7 +68,7 @@
    "source": [
     "c = 3\n",
     "\n",
-    "rep_2 = RepModular(c, minimo=100)    \n",
+    "rep_2 = RepModular(c)    \n",
     "rep_2.construir(G)\n",
     "\n",
     "rep_2.checks()"
